# HEC-RAS-AUTO

./: .gitignore  HECRASPlotDriverError.txt  Makefile  README.md  examplerun.txt  pyproject.toml  tmp_hec32_test.ps1  tmp_hec_test.vbs
HEC-Commander-main/HEC-Commander-main/: LICENSE
analyse/Conservative Approach/: MeerlustkloofPartB15.O01  MeerlustkloofPartB15.f01  MeerlustkloofPartB15.g01.hdf  MeerlustkloofPartB15.p01.hdf  MeerlustkloofPartB15.prj  MeerlustkloofPartB15.r01  MeerlustkloofPartB15.rasmap
analyse/High-Impact Approach/: MeerlustkloofPartB40.O01  MeerlustkloofPartB40.f01  MeerlustkloofPartB40.g01.hdf  MeerlustkloofPartB40.p01.hdf  MeerlustkloofPartB40.prj  MeerlustkloofPartB40.r01  MeerlustkloofPartB40.rasmap
analyse/Moderate Approach Roughness Sensitivity Analysis/: MeerlustkloofPartB25R0055.O01  MeerlustkloofPartB25R0055.g01  MeerlustkloofPartB25R0055.g01.hdf  MeerlustkloofPartB25R0055.p01  MeerlustkloofPartB25R0055.p01.hdf  MeerlustkloofPartB25R0055.prj  MeerlustkloofPartB25R0055.r01  MeerlustkloofPartB25R0055.rasmap
cfm_dense_sampling_toolkit/: README.md
config/: agent.yml  ai.yml  automation.yml  project.yml  project_finalized_partb.yml  project_live.yml  project_tmp_auto_transform.yml  project_tmp_check.yml  project_tmp_raw_constraints.yml  retrieval.yml  sheets.yml  thresholds.yml
config/scenarios/: baseline.yml  (+5 more)
hec_ras_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
prompts/: meerlustkloof_assignment_prompt.txt
scripts/: run_prompt_live_run_example.ps1
templates/: report.md.j2
tmp/: assignment_prompt_full.txt
(+653 files in other folders)
