[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hec-ras-auto"
version = "0.1.0"
description = "HEC-RAS supervised automation pipeline for baseline and scenario analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "HEC-RAS-AUTO" }]
dependencies = [
  "typer>=0.12.5",
  "pydantic>=2.8.2",
  "PyYAML>=6.0.2",
  "pandas>=2.2.2",
  "numpy>=2.0.1",
  "geopandas>=1.0.1",
  "shapely>=2.0.6",
  "pyproj>=3.6.1",
  "fiona>=1.9.6",
  "rasterio>=1.3.10",
  "openpyxl>=3.1.5",
  "h5py>=3.11.0",
  "matplotlib>=3.9.2",
  "jinja2>=3.1.4",
  "tabulate>=0.9.0",
  "openai>=1.50.0",
  "pywin32>=306; platform_system == 'Windows'",
  "comtypes>=1.4.8; platform_system == 'Windows'",
  "ezdxf>=1.3.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.2",
  "mypy>=1.11.2",
]

[project.scripts]
ras-auto = "src.cli.main:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
